# emacsy

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  advice.nw  autogen.sh  block.nw  buffer.nw  command.nw  configure.ac  convenience-lambda.scm  core.nw  emacsy-c-api.nw  emacsy.nw  emacsy.w  event.nw  hello.w  kbd-macro.nw  keymap.nw  klecl.nw  minibuffer.nw  srfi-64.scm  todo.org  util.nw  windows.nw
check/: harness.scm
example/: .gitignore  Makefile.am
examples/: Makefile  README.md  hello-emacsy.nw
examples/hello-emacsy/: .hello-emacsy  Makefile  Makefile.am  configure.ac  hello-emacsy-paper.nw  hello-emacsy.nw  myenv.sh
examples/hello-emacsy/src/: Makefile.am  hello-emacsy.nw  myenv.sh
examples/hello-emacsy/support/automake/: guile.am  noweb.am
examples/hello-emacsy/support/m4/: ax_check_glut.m4
examples/hello-emacsy/tests/: Makefile.am  works-without-noweb.sh.in
src/: Makefile.am  check.scm  cursor-list.scm  line-pragma.nw
src/emacsy/: Makefile.am  advice.nw  agenda.scm  block.nw  buffer.nw  command.nw  core.nw  coroutine-test.scm  coroutine.scm  emacsy-c-api.nw  emacsy.nw  event.nw  help.nw  job-test.scm  job.scm  kbd-macro.nw  keymap.nw  klecl.nw  minibuffer.nw  mode.scm  mru-stack.nw  self-doc.nw  util.nw  window.nw  windows.nw
support/automake/: guile.am  noweb.am  noweb2.am
support/images/: child-window-diagram.graffle  window-diagram.graffle
support/latex/: commands.tex  hello-emacsy.tex
support/m4/: ax_check_noweb.m4  ax_check_open.m4
support/noweb/: boiler-plate.nw  paper-footer.nw  paper-header.nw  paper-wrapper.nw
support/pkg-config/: Makefile.am  emacsy.pc.in
support/pkg-config/not-installed/: emacsy.pc.in
support/scheme/: check.scm  float-equality.scm
support/scheme/srfi/: srfi-64.scm
test/: Makefile.am  dummy.sh  print-install.sh  print-install.sh.in  works-without-noweb.sh.in
tests/: Makefile.am  print-install.sh  works-without-noweb.sh
